# ikun-net

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  train_classifier.py  train_encoder.py
data/: __init__.py  download_dataset.py  prepare_masks.py
ikunnet/: __init__.py  cli.py  color_separator.py
ikunnet/models/: __init__.py  color_token_encoder.py  color_transformer_classifier.py  contrastive_loss.py  encoder.py  projection_head.py  query_pooling.py  rgb_positional_encoding.py  uniformity_loss.py  vicreg_loss.py
ikunnet/training/: __init__.py  augmentation.py  dataset.py  online_dataset.py  trainer.py
tests/: test_color_separator.py
