[project]
name = "ikun-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # PyTorch ecosystem
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",

    # Core scientific computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Machine learning
    "scikit-learn>=1.3.0",

    # Deep learning
    "transformers>=4.30.0",
    "timm>=0.9.0",
    "einops>=0.6.0",
    "accelerate>=0.20.0",

    # Computer vision
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "albumentations>=1.3.0",

    # NLP
    "tokenizers>=0.13.0",
    "datasets>=2.12.0",

    # Experiment tracking
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",

    # Utilities
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "kaggle>=1.6.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
